--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="siteTitle">
-            Spearfishin'?
+            Spearfishin'
         </div>
         <nav class="navvy">
             <ul>
