--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
             <ul>
                 <li>Home</li>
                 <li>About</li>
-                <li>Where to go</li>
+                <li>Gear</li>
                 <li>Contact</li>
             </ul>
             <img>
         </nav>
     </header>
-    <div class="content-wrapper">
-    <section>
+    <section class="content-articles">
         <article>
             <h1> Why would I want to go spearfishing?</h1>
             <p>
@@ -40,14 +39,15 @@
             </p>
         </article>
     </section>
-    <aside>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, omnis eaque. Tempora ullam quae voluptas, doloremque, esse
-        ex, alias provident dolor autem itaque fugiat quia possimus hic, laborum. Debitis, veritatis.
-    </aside>
-    <footer>
+    <div class="side-content">
+        <img src=spearfish.jpg>
+        <aside>
+        Look how much fun this guy is having!
+        </aside>
+    </div>
+    <footer class="footer">
         Site created by Brady Gerndt. "I went spearfishing once. It was fun."
     </footer>
-    </div>
 </body>
 
 </html>
