updated font and fixed some width issues

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <script src="main.js"></script>
     <title> About</title>
 </head>
@@ -23,6 +24,7 @@
             <img>
         </nav>
     </header>
+    <div class="wrapper">
     <section class="content-articles">
         <article>
             <h1> Why would I want to go spearfishing?</h1>
@@ -41,9 +43,11 @@
     </section>
     <div class="side-content">
         <img src=spearfish.jpg>
+        <!-- image source: http://www.spearfishingpanama.com/morronegrito.shtml-->
         <aside>
         Look how much fun this guy is having!
         </aside>
+    </div>
     </div>
     <footer class="footer">
         Site created by Brady Gerndt. "I went spearfishing once. It was fun."
