Added git ignore and resized font.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
     <script src="main.js"></script>
     <title> About</title>
 </head>
@@ -25,29 +26,30 @@
         </nav>
     </header>
     <div class="wrapper">
-    <section class="content-articles">
-        <article>
-            <h1> Why would I want to go spearfishing?</h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt facere doloremque pariatur repudiandae dolor quasi blanditiis
-                ipsa accusamus, architecto ut aperiam nisi cum ipsum. Minima totam fugiat, cum itaque dolores.
-            </p>
-        </article>
-        <article>
-            <h1> What do I need to get started? </h1>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo facilis numquam blanditiis, quaerat distinctio obcaecati iusto
-                at dolores? Eos officia vel dignissimos amet velit perspiciatis quae rem eum cumque dicta.
-            </p>
-        </article>
-    </section>
-    <div class="side-content">
-        <img src=spearfish.jpg>
-        <!-- image source: http://www.spearfishingpanama.com/morronegrito.shtml-->
-        <aside>
-        Look how much fun this guy is having!
-        </aside>
-    </div>
+        <section class="content-articles">
+            <article>
+                <h1> Why would I want to go spearfishing?</h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt facere doloremque pariatur repudiandae dolor quasi blanditiis
+                    ipsa accusamus, architecto ut aperiam nisi cum ipsum. Minima totam fugiat, cum itaque dolores.
+                </p>
+            </article>
+            <article>
+                <h1> What do I need to get started? </h1>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo facilis numquam blanditiis, quaerat distinctio obcaecati iusto
+                    at dolores? Eos officia vel dignissimos amet velit perspiciatis quae rem eum cumque dicta.
+                </p>
+            </article>
+
+        </section>
+        <div class="side-content">
+            <img src=spearfish.jpg>
+            <!-- image source: http://www.spearfishingpanama.com/morronegrito.shtml-->
+            <aside>
+                Look how much fun this guy is having!
+            </aside>
+        </div>
     </div>
     <footer class="footer">
         Site created by Brady Gerndt. "I went spearfishing once. It was fun."
