changed colors, adjusted the layout a bit.

--- a/index.html
+++ b/index.html
@@ -30,16 +30,20 @@
             <article>
                 <h1> Why would I want to go spearfishing?</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt facere doloremque pariatur repudiandae dolor quasi blanditiis
-                    ipsa accusamus, architecto ut aperiam nisi cum ipsum. Minima totam fugiat, cum itaque dolores.
+                    Spearfishing is a more active and adventurous branch of the great sport of fishing. It's a great way to get a swim in while trying to catch some tasty dinner.
+                    The active nature of spearfishing brings forth a great feeling of adrenaline and accomplishment that isn't always matched in traditional fishing. 
+                    It allows you a glimpse of the underwater world as you become immersed to track down your prey.
+
                 </p>
             </article>
             <article>
                 <h1> What do I need to get started? </h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo facilis numquam blanditiis, quaerat distinctio obcaecati iusto
-                    at dolores? Eos officia vel dignissimos amet velit perspiciatis quae rem eum cumque dicta.
-                </p>
+                <ul> 
+                    <li><strong>A speargun or polespear.</strong> <p>You can find these online or in a dive shop.</p></li>
+                    <li><strong>A wet suit.</strong> <p>Even if you're fishing in warmer water, prolonged exposure underwater can lead to unwanted results!</p></li>
+                    <li><strong>A boat</strong><p>Sometimes it may be necessary to navigate the waters to reach remote spots.</li></p>
+                        <li><strong>A diver down flag</strong><p>You'll want to let folks know you're diving in the area.</p></li>
+                </ul>
             </article>
 
         </section>
