--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="main.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
     <title> About</title>
 </head>
 
@@ -48,7 +48,7 @@
 
         </section>
         <div class="side-content">
-            <img src=spearfish.jpg>
+            <img src=img/spearfish.jpg>
             <!-- image source: http://www.spearfishingpanama.com/morronegrito.shtml-->
             <aside>
                 Look how much fun this guy is having!
